# imdash

./: .gitignore  CMakeLists.txt  LICENSE  LICENSES.yaml  MANIFEST.in  README.md  dynamic_subscriber.py  image_view.py  main.py  package.xml  pyproject.toml
scripts/: imdash
src/imdash/: __init__.py  main.py  utils.py
src/imdash/components/: __init__.py
src/imdash/components/view_2d/: __init__.py  annotation.py  bars.py  circle.py  drag_line.py  drag_point.py  history.py  hot_key.py  image.py  inf_line.py  point_cloud.py  point_cloud_proj.py  rectangle.py  value.py
src/imdash/connectors/: __init__.py  connector_base.py  filesystem_connector.py  ros2_connector.py  structstore_connector.py
src/imdash/resources/: LICENSE
src/imdash/views/: __init__.py  image_saver_view.py  ros_bag_record_view.py  view_2d.py  view_object.py
