<?xml version="1.0"?>
<package format="3">
  <name>imdash</name>
  <version>0.0.1</version>
  <description>Dynamic real-time dashboards with imviz</description>
  <maintainer email="jona.ruof@uni-ulm.de">Jona Ruof</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>aduulm_cmake_tools</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
